# Exerc-cioSerializers

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
product/: models.py  serializers.py  tests.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_rename_category_product.py
